# supercompress

./: .dockerignore  .env.example  .gitignore  BUILDERSHIP.md  DEPLOY.md  LAUNCH.md  LICENSE  PRODUCT.md  README.md  SUBMISSION.md  bootstrap.sh  fly.toml  pyproject.toml  render.yaml  setup.sh  vercel.json
.github/workflows/: ci.yml  deploy-api.yml  pages.yml  publish-api-docker.yml
checkpoints/: default.pt
deploy/: Dockerfile
docs/: API.md  INTEGRATE.md
examples/: api_client.py  demo_compare.py
examples/buildership_loop/: run.py
examples/demo_fixtures/: github_snapshot.json  gmail_snapshot.json  linear_snapshot.json  tavily_extract.json  tavily_search.json
openclaw/: SKILL.md
scripts/: export_web_demo.py  inject-api-url.js  render-bootstrap.sh  start-public-api.sh  train_checkpoint.py
supercompress/: __init__.py  checkpoint.py  cli.py  compress.py  http_client.py  local.py  oracle.py  policies.py  simulator.py
supercompress/stack/: __init__.py  _paths.py  api.py  api_models.py  auth.py  config.py  cors.py  dashboard.py  db.py  demo_loop.py  doctor.py  firebase_auth.py  integrations.py  lab.py  server.py  server_api.py  setup.py  turn4_demo.py
supercompress/stack/agent/: __init__.py  loop.py  prompts.py
supercompress/stack/composio/: __init__.py  client.py
supercompress/stack/nebius/: __init__.py  client.py  models.py
supercompress/stack/tavily/: __init__.py  client.py
tests/: conftest.py  test_agent_turn.py  test_api.py  test_auth.py  test_memory.py  test_stack.py
web/: api.html  app.html  brief.html  dashboard.html  focus.html  index.html
web/assets/css/: brief.css  style.css
web/assets/js/: app.js  (+6 more)
web/data/: demo.json
