[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supercompress"
version = "0.1.0"
description = "SuperCompress — agent memory layer. Compress context before every LLM turn."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
supercompress-train = "supercompress.cli:train_main"

[tool.setuptools.packages.find]
include = ["supercompress*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
