[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supercompress"
version = "0.3.0"
description = "SuperCompress — agent memory layer. Fix turn 4. ~65% KV savings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.40.0",
    "composio>=0.8.0",
    "composio-openai>=0.8.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
supercompress = "supercompress.cli:app"
supercompress-train = "supercompress.cli:train_main"

[tool.setuptools.packages.find]
include = ["supercompress*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
